--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-derive-core = { version = "0.1.0", path = "../derive-core" }
+syn = { version = "1.0.60", features = ["extra-traits", "full", "fold"] }
+quote = "1.0.9"
+proc-macro2 = "1.0.24"
 proc-macro-error = "1.0"
-proc-macro2 = "1.0"
