--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "1.0.60", features = ["extra-traits", "full", "fold"] }
 quote = "1.0.9"
 proc-macro2 = "1.0.24"
 proc-macro-error = "1.0"
+derive-core = { path = "../derive-core" }
