--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ keywords = ["gamedev", "game", "grid", "2D", "utility"]
 categories = ["game-development"]
 
 [workspace]
-members = ["derive", "derive-core"]
+members = ["game-grid-derive", "game-grid-derive-core"]
 
 [features]
 bevy-ivec2 = ["dep:bevy"]
 
 [dependencies]
-derive = { version = "0.1.0", path = "derive" }
+game-grid-derive = { version = "0.1.0", path = "game-grid-derive" }
 bevy = { version = "0.9.1", optional = true }
