--- a/game-grid-derive/Cargo.toml
+++ b/game-grid-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "derive"
+name = "game-grid-derive"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,4 +11,4 @@ syn = { version = "1.0.60", features = ["extra-traits", "full", "fold"] }
 quote = "1.0.9"
 proc-macro2 = "1.0.24"
 proc-macro-error = "1.0"
-derive-core = { path = "../derive-core" }
+game-grid-derive-core = { path = "../game-grid-derive-core" }
